tests/snapshots/file@operator@greater_nonnum_num.lox.snap
---
source: tests/common/mod.rs
description: "\"1\" > 1; // expect runtime error: Operands must be numbers.\n"
input_file: test_files/operator/greater_nonnum_num.lox
---
OUT: 

===
ERR: 
  × invalid operands, expected number
   ╭────
 1 │ "1" > 1; // expect runtime error: Operands must be numbers.
   ·     ┬
   ·     ╰── here
   ╰────
